<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Messenger-TFS</string>

    <!-- Fragment Login -->
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password"><a href="https://tinkoff-android-spring-2023.zulipchat.com/accounts/password/reset">Forgot your password?</a>
    </string>
    <string name="password_visibility">Password visibility</string>

    <!-- Fragment Messages -->
    <string name="message">Message</string>
    <string name="arrow_back">Arrow back</string>
    <string name="action">Action</string>
    <string name="topic_name">Topic…</string>
    <string name="write_message">Write message…</string>
    <string name="messages_topic_template">Topic: #%s</string>
    <string name="add_reaction">Add reaction</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="edit_message">Edit message</string>
    <string name="edit_topic">Edit topic</string>
    <string name="delete_message">Delete message</string>
    <string name="attach_image">Attach image</string>
    <string name="attach_file">Attach file</string>
    <string name="save_attachments">Save attachments</string>
    <string name="downloading_result">Downloading result</string>

    <!-- Fragment Channels -->
    <string name="search">Search…</string>
    <string name="all_streams">All Streams</string>
    <string name="subscribed_streams">Subscribed</string>
    <string name="arrow">Arrow</string>
    <string name="new_messages">new mes.</string>
    <string name="channel_name_template">#%s</string>
    <string name="subscribe_to_channel">Subscribe</string>
    <string name="unsubscribe_from_channel">Unsubscribe</string>
    <string name="delete_channel">Delete</string>

    <!-- Fragment People -->
    <string name="users">Users…</string>
    <string name="online_status">Online status</string>

    <!-- Fragment Profile -->
    <string name="active">active</string>
    <string name="idle">idle</string>
    <string name="offline">offline</string>
    <string name="log_out">Log out</string>

    <!-- MessageView -->
    <string name="avatar">Avatar</string>

    <!-- Bottom navigation -->
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>

    <!-- Dialog -->
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="confirm_delete_message">Are you want to delete the message?</string>
    <string name="confirm_delete_channel">Are you want to delete the channel?</string>
    <string name="create_channel">Create channel</string>
    <string name="channel_name">Channel name…</string>
    <string name="channel_description">Channel description…</string>
    <string name="ok">OK</string>
    <string name="close_screen">Close screen</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!-- Toast -->
    <string name="download_will_start_soon">Download will start soon</string>
    <string name="message_delete_request_sent">Message delete request sent</string>

    <!-- Errors -->
    <string name="error_user_loading">User loading error.</string>
    <string name="error_messages">Error while working with messages.</string>
    <string name="error_channels">Error while working with channels.</string>
    <string name="error_loading_users">Error loading users.</string>
    <string name="error_network">Network error.</string>
    <string name="error_login">Error checking email and password.</string>
    <string name="error_file_not_found">File not found.</string>
    <string name="error_uri">Invalid uri.</string>
    <string name="error_file_empty">File is empty.</string>
    <string name="error_file_big">File is too big.</string>
    <string name="error_unknown_file_type">Unknown file type.</string>
    <string name="error_downloading">downloading error</string>
    <string name="error_bad_request">Bad request</string>
    <string name="error_unauthorized">Authorization problem</string>
    <string name="error_forbidden">Access is denied</string>
    <string name="error_url_not_found">Internet resource not found</string>
    <string name="error_too_many_attempts">Too many attempts, try again later</string>
    <string name="error_internal_server_problem">Internal problem on the server</string>

</resources>