<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_700_color"
    tools:context=".presentation.feature.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            style="@style/LoginLogoStyle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/LoginTitleStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/LoginEditFieldStyle"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize"
            tools:visibility="visible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/LoginEditFieldStyle"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                tools:ignore="RtlSymmetry,VisualLintTextFieldSize"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imageViewPasswordVisibility"
                style="@style/LoginPasswordStyle"
                android:layout_gravity="center|end"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/password_visibility"
                tools:visibility="visible" />

        </FrameLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:enabled="false"
            android:text="@string/log_in"
            android:visibility="gone"
            app:cornerRadius="31dp"
            tools:ignore="VisualLintButtonSize"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBarStyle"
        android:layout_gravity="center"
        tools:visibility="visible" />

</FrameLayout>