<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:background="?attr/background_500_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/MenuItemStyle"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="title" />

    <TextView
        android:id="@+id/textViewSubscribe"
        style="@style/MenuItemStyle"
        android:text="@string/subscribe_to_channel" />

    <TextView
        android:id="@+id/textViewUnsubscribe"
        style="@style/MenuItemStyle"
        android:text="@string/unsubscribe_from_channel" />

    <TextView
        android:id="@+id/textViewDelete"
        style="@style/MenuItemStyle"
        android:text="@string/delete_channel" />
</LinearLayout>