<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_700_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="?attr/background_500_color"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/profile"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTitleStyle"
        app:titleTextColor="?attr/text_200_color"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        tools:src="@drawable/ic_default_avatar" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="?attr/text_200_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
        tools:text="@tools:sample/full_names" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textViewStatus,textViewStatusOnline,textViewStatusOffline"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:textColor="?attr/text_500_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        tools:text="In a meeting" />

    <TextView
        android:id="@+id/textViewStatusOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textColor="?attr/online_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewStatus"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewStatusOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:textColor="?attr/text_700_color"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewStatus" />

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:background="@drawable/shape_logout"
        android:paddingHorizontal="56dp"
        android:paddingVertical="14dp"
        android:text="@string/log_out"
        android:textColor="?attr/text_200_color"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <include
        android:id="@+id/shimmer"
        layout="@layout/shimmer" />

</androidx.constraintlayout.widget.ConstraintLayout>