<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_700_color"
    tools:context=".presentation.fragment.menu.ChannelsPageFragment">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginTop="126dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/face" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="?attr/text_200_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
        tools:text="@tools:sample/full_names" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textViewStatus,textViewStatusOnline,textViewStatusOffline"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:textColor="?attr/text_500_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        tools:text="In a meeting" />

    <TextView
        android:id="@+id/textViewStatusOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textColor="?attr/online_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewStatusOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:textColor="?attr/text_700_color"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_logout"
        android:paddingHorizontal="56dp"
        android:paddingVertical="14dp"
        android:text="@string/log_out"
        android:textColor="?attr/text_200_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>